deploy: f5665762f108dab51efaed2fe5856fb25dd34ce0

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="index.css" rel="stylesheet" />
   </head>
 
@@ -14,9 +15,9 @@
     <!-- =============================================
         ニュースフィーダー部分
     ============================================= -->
-    <div class="news__unit">
-      <div class="news__unit_inner">
-        <div class="news__unit_item">
+    <div class="news__unit swiper-container">
+      <div class="news__unit_inner swiper-wrapper">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">2021-11-13</div>
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="https://pokemon.gamerstand.net/5896">【話題】ユナイトスレ、ついに●●自慢パレスが出てくるｗｗ</a></div>
@@ -51,7 +52,7 @@
             <div class="news__unit_item_body_src">Source: <a href="http://pokemonunite.blog.jp/">ポケモンユナイトまとめ速報</a></div>
           </div>
         </div>
-        <div class="news__unit_item">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">2021-11-12</div>
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="https://kabigon-unite.com/archives/11864?utm_source&#x3D;rss&amp;utm_medium&#x3D;rss&amp;utm_campaign&#x3D;%25e3%2580%2590%25e3%2583%259d%25e3%2582%25b1%25e3%2583%25a6%25e3%2583%258a%25e3%2580%2591%25e4%25b8%258b%25e3%2583%258b%25e3%2583%25b3%25e3%2583%2595%25e3%2582%25a3%25e3%2582%25a2%25e3%2581%25af%25e4%25b8%25ad%25e5%25a4%25ae%25e3%2582%25bf%25e3%2583%2596%25e3%2583%25b3%25e3%2583%258d%25e7%2584%25a1%25e8%25a6%2596%25e3%2581%2597">【ポケユナ】下ニンフィアは中央タブンネ無視して自陣のタブンネを狩るのが基本らしい</a></div>
@@ -130,7 +131,7 @@
             <div class="news__unit_item_body_src">Source: <a href="https://pokemon.gamerstand.net">ポケモンユナイト攻略まとめ隊</a></div>
           </div>
         </div>
-        <div class="news__unit_item">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">2021-11-11</div>
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="https://kabigon-unite.com/archives/11643?utm_source&#x3D;rss&amp;utm_medium&#x3D;rss&amp;utm_campaign&#x3D;%25e3%2580%2590%25e3%2583%259d%25e3%2582%25b1%25e3%2583%25a6%25e3%2583%258a%25e3%2580%2591%25e3%2583%25a4%25e3%2583%2589%25e3%2583%25a9%25e3%2583%25b3%25e3%2581%25ab%25e3%2581%258a%25e3%2581%259f%25e3%2581%25b0%25e3%2582%258a%25e3%2581%25a8%25e3%2581%258b%25e3%2581%2584%25e3%2581%25a3%25e3%2581%25a6%25e3%2582%258b%25e3%2581%25ae">【ポケユナ】ヤドランにおたばりとかいってるのはヤドランエアプｗ</a></div>
@@ -141,14 +142,14 @@
             <div class="news__unit_item_body_src">Source: <a href="https://kabigon-unite.com">カビゴン速報</a></div>
           </div>
         </div>
-        <div class="news__unit_item">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">2021-11-10</div>
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="https://kabigon-unite.com/archives/11548?utm_source&#x3D;rss&amp;utm_medium&#x3D;rss&amp;utm_campaign&#x3D;%25e3%2580%2590%25e3%2583%259d%25e3%2582%25b1%25e3%2583%25a6%25e3%2583%258a%25e3%2580%2591%25e3%2583%2590%25e3%2583%25a9%25e3%2583%25b3%25e3%2582%25b9%25e8%25aa%25bf%25e6%2595%25b4%25e5%25be%258c%25e3%2581%25ae%25e5%258f%258d%25e5%25bf%259c%25e3%2581%25be%25e3%2581%25a8%25e3%2582%2581%25ef%25bc%2581%25e5%25bc%25b7%25e5%258c%2596">【ポケユナ】バランス調整後の反応まとめ！強化のはずがなぜか弱体化しているポケモンがいるらしい</a></div>
             <div class="news__unit_item_body_src">Source: <a href="https://kabigon-unite.com">カビゴン速報</a></div>
           </div>
         </div>
-        <div class="news__unit_item">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">2021-11-09</div>
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="https://kabigon-unite.com/archives/11409?utm_source&#x3D;rss&amp;utm_medium&#x3D;rss&amp;utm_campaign&#x3D;%25e3%2580%2590%25e3%2583%259d%25e3%2582%25b1%25e3%2583%25a6%25e3%2583%258a%25e3%2580%2591%25e3%2583%25ab%25e3%2582%25ab%25e3%2583%25aa%25e3%2582%25aa%25e3%2581%25af%25e3%2582%25b0%25e3%2583%25ad%25e3%2583%2591%25e3%2583%25b3%25e3%2581%258c%25e5%25a4%259a%25e3%2581%2584%25e3%2581%25a3%25e3%2581%25a6%25e8%25a6%258b%25e3%2581%259f">【ポケユナ】ルカリオはグロパンが多いって見たけど回復がある分神速が強そうなんだがなぁ</a></div>
@@ -159,7 +160,7 @@
             <div class="news__unit_item_body_src">Source: <a href="https://kabigon-unite.com">カビゴン速報</a></div>
           </div>
         </div>
-        <div class="news__unit_item">
+        <div class="news__unit_item swiper-slide">
           <div class="news__unit_item_date">2021-11-08</div>
           <div class="news__unit_item_body">
             <div class="news__unit_item_body_ttl"><a href="https://kabigon-unite.com/archives/11185?utm_source&#x3D;rss&amp;utm_medium&#x3D;rss&amp;utm_campaign&#x3D;%25e3%2580%2590%25e3%2583%259d%25e3%2582%25b1%25e3%2583%25a6%25e3%2583%258a%25e3%2580%2591%25e6%259c%2580%25e5%25be%258c%25e3%2581%25be%25e3%2581%25a7%25e3%2583%25a9%25e3%2583%25b3%25e3%2582%25ad%25e3%2583%25b3%25e3%2582%25b0%25e4%25b9%2597%25e3%2582%258d%25e3%2581%2586%25e3%2581%25a8%25e3%2582%25b9%25e3%2583%2588%25e3%2583%25ac">【ポケユナ】最後までランキング乗ろうとストレス貯めて必死にレート盛ってたソロプレイヤー憐れで草</a></div>
@@ -175,6 +176,7 @@
     <!-- =============================================
         ニュースフィーダー部分
     ============================================= -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
